--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -318,6 +318,7 @@ h3.section-subheading {
 
 .btn {
   font-weight: 700;
+  word-break: normal;
 }
 
 .btn-xl {
@@ -327,5 +328,28 @@ h3.section-subheading {
 }
 
 #jumbotron-img {
-  background-image: url("static/img/title.png");
+  padding-bottom: 100px;
+  width:100%;
+  background-image: url("../img/title.png");
+  background-repeat:no-repeat;
+}
+
+.nav.nav-center {
+  margin:0;
+  float:none;
+}
+
+.navbar-inner{
+  text-align:center;
+}
+
+.navbar-nav {
+  width: 100%;
+  text-align: center;
+}
+.navbar-nav>li {
+  float: initial;
+}
+.nav>li {
+  display:inline-block;
 }
